@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform{
}
class Freelancer {
  -String freeID
  -String name
  -String levelExp
  -String email
  -String nif
  -String iban
  -String country
}

class Organization {
  -String name
  -String email
  -String nif
}

class Task {
  -String idTask
  -String description
  -int timeTask
  -double costHour
  -String taskCategory
  -boolean isPayed
  -boolean isFinished
}

class Manager {
  -String nameM
  -String emailM
  -String role
}

class TransactionExecution {
  -Date endDate
  -double delay
  -String descriptionOfQuality
  -int transID
}

class Payment{
  -double valueE
  -double valueC
}

class DefinePayment{
  -Time timeToPay
  -Date dateToPay
  -int nrDays
  }


class Writer{
  }

Freelancer "1" -- "1..*" Payment: receives >
Freelancer "1" -- "1" Writer: receives email from >

Task "1..*" -- "1" Freelancer: made by >


Platform "1" -- "1..*" Organization: has registered >
Platform "1" -- "1..*" Freelancer: has >
Platform "1" -- "1" Freelancer: sends email to >

Platform "1" -- "1" Writer : sends emails from >


Organization "1" -- "1" Manager: has >
Organization "1" -- "1" Collaborator: has >
Organization "1" -- "1..*" Task: has >
Organization "1" -- "1..*" DefinePayment: executes >


Manager "1" -- "1" DefinePayment: defines

TransactionExecution "1" -- "1" Task : has >
TransactionExecution "1" -- "1" Freelancer: related to the work of >
TransactionExecution "1" -- "1" Payment : originates >

DefinePayment "1" -- "1..*" Payment: has >

Collaborator "1" -- "1..*" Task: creates >
Collaborator "1" -- "1..*" TransactionExecution: creates >











@enduml
